Fix minor layout issues

--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -56,7 +56,7 @@ h1 span {
 
 .card {
   position: relative;
-  min-height: 25rem;
+  min-height: 22rem;
   margin-bottom: 2.5rem;
   padding: 0 3rem;
   background-color: white;
@@ -124,11 +124,11 @@ h1 span {
   }
 
   .wrapper {
-    padding: 7rem 2rem;
+    padding: 5.5rem 2rem;
   }
   
   .text-container {
-    max-width: 50%;
+    max-width: 45%;
     margin: auto;
   }
 
@@ -137,6 +137,7 @@ h1 span {
   }
   .card {
     margin: 0;
+    min-height: 25rem;
   }
 
   .card h2 {
